--- a/action.yml
+++ b/action.yml
@@ -6,16 +6,56 @@ inputs:
     description: Branch name
     required: true
     default: data
-  fail-if-exists:
-    description: Fail if branch already exists
-    default: false
-  force-empty:
-    description: Overwrite existing branch, ensuring it is truly empty
-    default: false
+  if-exists:
+    description: What action to take if the branch already exists; fail, skip, checkout, or wipe
+    required: true
+    default: checkout
 outputs:
-  branch:
-    description: Branch name
+  created:
+    description: If the branch was successfully created (or checked out)
 runs:
-  using: node20
-  main: main.js
+  using: composite
+  steps:
+    - name: Check out the repo
+      uses: actions/checkout@v4
+
+    - name: Existing branch behavior
+      shell: bash
+      run: |
+        echo "Checking if branch exists: ${{ inputs.branch }}"
+        if git branch | grep -q ${{ inputs.branch }}; then
+          echo "Branch '${{ inputs.branch }}' already exists..."
+          case ${{ inputs.if-exists }} in
+            fail)
+              echo "Instructed to fail."
+              echo "created: false" >> $GITHUB_ENV
+              exit 1
+              ;;
+            skip)
+              echo "Instructed to skip"
+              echo "created: false" >> $GITHUB_ENV
+              ;;
+            checkout)
+              echo "Checking out instead..."
+              git checkout ${{ inputs.branch }}
+              echo "created: true" >> $GITHUB_ENV
+              ;;
+            wipe)
+              echo "Ordered to nuke branch!"
+              echo " --- NOT YET IMPLEMENTED ---"
+              echo "created: false" >> $GITHUB_ENV
+              exit 1
+              ;;
+          esac
+          exit 0
+        fi
+
+    - name: Do the things
+      shell: bash
+      run: |
+        echo "Branch doesn't exist..."
+        echo "Creating empty branch: ${{ inputs.branch }}"
+        git switch --orphan ${{ inputs.branch }}
+        echo "created: true" >> $GITHUB_ENV
+        exit 0
 ...
