--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     name: Try to make an empty branch
     steps:
-      #- name: checkout
       - uses: actions/checkout@v4
 
       - run: ls -R
@@ -13,7 +12,7 @@ jobs:
       - id: foo
         uses: omnikron13/empty-branch-action@v0.1.1
         with:
-          branch: test-empty-1
+          branch: test-empty
           
       - name: debug print
         run: ls -R
